Bug 418837 - Master branch of kpat fails to compile with master branch of Frameworks, and Qt 5.14 branch
Summary: Master branch of kpat fails to compile with master branch of Frameworks, and ...
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-14 00:50 UTC by bluescreenavenger
Modified: 2020-03-16 06:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2020-03-14 00:50:44 UTC
It's odd that this worked before with 5.14, and I can't figure out what exactly changed, but it seems that .toSet is no longer defined...


[ 22%] Building CXX object libkcardgame/CMakeFiles/kcardgame.dir/kcardtheme.cpp.o
/srcbuild/kpat/libkcardgame/kcardtheme.cpp: In constructor ‘KCardTheme::KCardTheme(const QString&)’:
/srcbuild/kpat/libkcardgame/kcardtheme.cpp:154:50: error: ‘class QStringList’ has no member named ‘toSet’; did you mean ‘takeAt’?
                                supportedFeatures.toSet(),
                                                  ^~~~~
                                                  takeAt
make[2]: *** [libkcardgame/CMakeFiles/kcardgame.dir/build.make:158: libkcardgame/CMakeFiles/kcardgame.dir/kcardtheme.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/srcbuild/kpat/libkcardgame/kcardscene.cpp: In member function ‘void KCardScene::setHighlightedItems(const QList<QGraphicsItem*>&)’:
/srcbuild/kpat/libkcardgame/kcardscene.cpp:768:52: error: ‘fromList’ is not a member of ‘QSet<QGraphicsItem*>’
     QSet<QGraphicsItem*> s = QSet<QGraphicsItem*>::fromList( items );
                                                    ^~~~~~~~
make[2]: *** [libkcardgame/CMakeFiles/kcardgame.dir/build.make:145: libkcardgame/CMakeFiles/kcardgame.dir/kcardscene.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:388: libkcardgame/CMakeFiles/kcardgame.dir/all] Error 2
make: *** [Makefile:158: all] Error 2
PackageInstallSource finished in 0 seconds with result 2
Comment 1 Albert Astals Cid 2020-03-14 09:57:34 UTC
https://build.kde.org/job/Applications/job/kpat/ says it works fine?
Comment 2 bluescreenavenger 2020-03-14 13:37:41 UTC
Could be something up with my Qt branch I am building. I know Qt is very weird with how they handle branches. I am using this one https://code.qt.io/cgit/qt/qtbase.git/log/?h=5.14 not sure which one the KDE build system uses for 5.14   
I did find that it says something about 5.14 changing something in 5.14 https://doc.qt.io/qt-5/qlist.html#toSet    ...but I've been building it with a script against 5.14 for a few months, so I don't know why it would change so recently...
Comment 3 bluescreenavenger 2020-03-14 21:53:27 UTC
Ah, It's the deprecations. I am building out of Git, and cmake turns on excluding deprecated things when ./.git exists, removing those lines, and I can get it to build as normal
Comment 4 Albert Astals Cid 2020-03-14 23:01:20 UTC
Laurent, did you enable too much deprecation warnings here?
Comment 5 Laurent Montel 2020-03-15 08:29:17 UTC
(In reply to Albert Astals Cid from comment #4)
> Laurent, did you enable too much deprecation warnings here?

nope , just qt with qt5.14.1 or .2 added more deprecated methods. It's not logical in minor release.
I will look at for porting it today.
Comment 6 Laurent Montel 2020-03-16 06:07:43 UTC
Git commit 8b1e24e312b5649b657c245d600ffccc25b15e6c by Laurent Montel.
Committed on 16/03/2020 at 06:06.
Pushed by mlaurent into branch 'release/20.04'.

Fix compile with new qt5.14

M  +1    -1    CMakeLists.txt
M  +5    -1    libkcardgame/kcardscene.cpp
M  +6    -1    libkcardgame/kcardtheme.cpp

https://commits.kde.org/kpat/8b1e24e312b5649b657c245d600ffccc25b15e6c