Fix compile with new qt5.14

BUG: 418837